--- a/style.css
+++ b/style.css
@@ -129,6 +129,9 @@ footer img{
         top: 170px;
         left: 10px;
     }
+    #descriçao-2{
+        margin-right: 8px;
+    }
     
     
 }
